# beroringsskjerm

beroringsskjerm/: CMakeLists.txt  main.cpp  main.qml  resources.qrc  resources.qrc.autosave
beroringsskjerm/models/: Cube.qml  rcar.fbx
beroringsskjerm/models/meshes/: Rcar.qml  body.mesh  cube.mesh
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appberoringsskjerm.exp  appberoringsskjerm.ilk  appberoringsskjerm.lib  appberoringsskjerm_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qt/deploy_qml_imports/: appberoringsskjerm.cmake
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qt/qml_imports/: appberoringsskjerm_build.cmake  appberoringsskjerm_build.rsp  appberoringsskjerm_conf.rsp
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qt/rcc/: appberoringsskjerm_raw_qml_0.qrc  qmake_beroringsskjerm.qrc  qrc_appberoringsskjerm_raw_qml_0.cpp  qrc_qmake_beroringsskjerm.cpp  (+2 more)
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/.qtc_clangd/: compile_commands.json
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/appberoringsskjerm_autogen/: deps
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/beroringsskjerm/: appberoringsskjerm_qml_module_dir_map.qrc  qmldir
build-beroringsskjerm-Desktop_Qt_6_8_0_MSVC2022_64bit-Debug/qmltypes/: appberoringsskjerm_foreign_types.txt
(+325 files in other folders)
